# mangonel

./: .gitignore  Applications.cpp  Applications.h  CMakeLists.txt  COPYING  Calculator.cpp  Calculator.h  Config.cpp  Config.h  IconProvider.cpp  IconProvider.h  Label.cpp  Label.h  Mangonel.cpp  Mangonel.h  Messages.sh  Paths.cpp  Paths.h  Provider.cpp  Provider.h  README.md  Shell.cpp  Shell.h  main.cpp  main.qml  mangonel.desktop  mangonel.notifyrc
calc/: evaluator.cpp  evaluator.h  function.cpp  function.h  hmath.cpp  hmath.h  lexer.ll  node.cpp  node.h  number.c  number.h  numerictypes.cpp  numerictypes.h  parser.yy  result.cpp  result.h  valuemanager.cpp  valuemanager.h
globalshortcut/: COPYING  qglobalshortcut.cpp  qglobalshortcut.h  qglobalshortcut_macx.cpp  qglobalshortcut_win.cpp  qglobalshortcut_x11.cpp
po/ast/: mangonel.po
po/bs/: mangonel.po
po/ca/: mangonel.po
po/ca@valencia/: mangonel.po
po/cs/: mangonel.po
po/da/: mangonel.po
po/de/: mangonel.po
po/el/: mangonel.po
po/en_GB/: mangonel.po
po/eo/: mangonel.po
po/es/: mangonel.po
po/et/: mangonel.po
po/eu/: mangonel.po
po/fi/: mangonel.po
po/fr/: mangonel.po
po/ga/: mangonel.po
po/gl/: mangonel.po
po/hu/: mangonel.po
po/ia/: mangonel.po
po/it/: mangonel.po
po/ja/: mangonel.po
po/ka/: mangonel.po
po/kk/: mangonel.po
po/ko/: mangonel.po
po/lt/: mangonel.po
po/mr/: mangonel.po
po/nb/: mangonel.po
po/nds/: mangonel.po
po/nl/: mangonel.po
po/pa/: mangonel.po
po/pl/: mangonel.po
po/pt/: mangonel.po
po/pt_BR/: mangonel.po
po/ro/: mangonel.po
po/ru/: mangonel.po
po/sk/: mangonel.po
po/sl/: mangonel.po
po/sv/: mangonel.po
po/tr/: mangonel.po
po/ug/: mangonel.po
po/uk/: mangonel.po
po/zh_CN/: mangonel.po
po/zh_TW/: mangonel.po
providers/: Applications.cpp  Applications.h  Calculator.cpp  Calculator.h  ControlModules.cpp  ControlModules.h  Paths.cpp  Paths.h  Shell.cpp  Shell.h  Units.cpp  Units.h
providers/calculator/: constants.cpp  evaluator.cpp  evaluator.h  floatconfig.h  floatio.h  floatlogic.c  functions.cpp  functions.h  hmath.cpp  hmath.h  numberformatter.cpp  numberformatter.h  quantity.cpp  quantity.h  rational.cpp  settings.cpp  units.cpp  units.h
providers/units/: units.c
